# django_08

./: .coverage  .gitignore  manage.py  pyproject.toml
.github/workflows/: ci.yml
django_08/: asgi.py  settings.py  urls.py  wsgi.py
tabom/: models.py
tabom/migrations/: 0001_initial.py
